--- a/01-setup.yaml
+++ b/01-setup.yaml
@@ -12,9 +12,9 @@
     #     validate: 'visudo -cf %s'
 
     - name: set up authorized keys for {{ ansible_user }} user
-      authorized_key: user="{{ ansible_user }}" key="{{item}}"
+      authorized_key: user="{{ ansible_user }}" key="{{ item }}"
       with_file:
-        - ~/.ssh/id_rsa.pub
+        - ~/.ssh/emulab.pub
 
     - name: disable swap 1/2
       shell: swapoff -a
