--- a/06-configure-istio.yaml
+++ b/06-configure-istio.yaml
@@ -3,4 +3,4 @@
   tasks:
 
     - name: configure istio with istioctl
-      shell: istioctl manifest apply --set profile={{ profile }}
+      shell: istioctl manifest apply --set profile={{ istio_profile }}
